# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import categoriesRouter from "./categories";
+import cartRouter from "./cart";
+import newsletterRouter from "./newsletter";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(productsRouter);
+router.use(categoriesRouter);
+router.use(cartRouter);
+router.use(newsletterRouter);
 
 export default router;
